tests/baselines/reference/propertyAndFunctionWithSameName.errors.txt
==== tests/cases/compiler/propertyAndFunctionWithSameName.ts (2 errors) ====
    class C {
        x: number;
        x() { // error
        ~~~~~~~~~~~~~~
            return 1;
    ~~~~~~~~~~~~~~~~~
        }
    ~~~~~
!!! propertyAndFunctionWithSameName.ts(3,5): error TS2000: Duplicate identifier 'x'. Additional locations:
!!! 	propertyAndFunctionWithSameName.ts(2,5)
    }
    
    class D {
        x: number;
        x(v) { } // error
        ~~~~~~~~
!!! propertyAndFunctionWithSameName.ts(10,5): error TS2000: Duplicate identifier 'x'. Additional locations:
!!! 	propertyAndFunctionWithSameName.ts(9,5)
    }